--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:id="@+id/bt_test"
+        android:text="跳转微信分享"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <WebView
         android:id="@+id/wv_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></WebView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
